[package]
name = "ribbon-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["default"] }
avian3d = "0.3"
bevy_egui = "0.32"
bevy_ggrs = "0.18"
bevy_matchbox = "0.12"

# Additional useful dependencies
serde = { version = "1.0", features = ["derive"] }
rand = "0.8" 